ec2.tf
# key pair - for login
resource "aws_key_pair" "my_key" {
  key_name   = "terra-key-ec2"
  public_key = file(pathexpand("~/.ssh/terra-key-ec2.pub")) # it will read content from this file
}

# VPC & Security Group
resource "aws_default_vpc" "default" {
}

resource "aws_security_group" "my_security_group" {
  name        = "automate-sg"
  description = "this will add a TF generated Security Group"
  vpc_id      = aws_default_vpc.default.id # Interpolation
  # Interpolation -> # Interpolation -> It is a way in which you can inherit or extract values form a terraform block.

  tags = {
    Name = "automate-sg"
  }

  # Inbound Rules
  ingress {
    from_port   = 22 // SSH access
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "SSH Open"
  }

  ingress {
    from_port   = 80 // HTTP access
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP Open"
  }

  ingress {
    from_port   = 443 // HTTPS access
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTPS Open"
  }

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Port 8000 Open"
  }

  # Outbound Rules
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" // semantically equivalent to all
    cidr_blocks = ["0.0.0.0/0"]
    description = "All access open outbound"

  }
}

/*
# ec2 instance Using 'Count' as meta argument.
resource "aws_instance" "my_instance" {
  count = 2 #Meta Argument -> It will make these many resources.

  for_each = tomap({
    TWS-Junoon-Automate-micro = "t2.micro"
    TWS-Junoon-Automate-medium = "t2.medium"
  }) # Meta Argument
  key_name        = aws_key_pair.my_key.key_name # Interpolation
  security_groups = [aws_security_group.my_security_group.name]
  instance_type   = var.ec2_instance_type
  ami             = var.ec2_ami_id # Ubuntu

  user_data = file("install_nginx.sh")
  # This script will run when the instance is being created for the FIRST time

  root_block_device {
    volume_size = var.ec2_root_storage_size
    volume_type = "gp3"
  }

  tags = {
    Name = "TWS-Junoon-Automate-July19-${count.index}"
  }
}
*/



# ec2 instance Using 'for_each' as meta argument.
resource "aws_instance" "my_instance" {
  for_each = tomap({
    TWS-Junoon-Automate-micro  = "t2.micro"
    TWS-Junoon-Automate-medium = "t2.medium"
  }) # Meta Argument

  depends_on = [aws_security_group.my_security_group, aws_key_pair.my_key]
  # Used when Terraform cannot automatically detect the dependency.
  # It just means "Create these resources first, and only then create this resource."

  key_name        = aws_key_pair.my_key.key_name # Interpolation
  security_groups = [aws_security_group.my_security_group.name]
  instance_type   = each.value
  ami             = var.ec2_ami_id # Ubuntu

  user_data = file("install_nginx.sh")
  # This script will run when the instance is being created for the FIRST time

  root_block_device {
    volume_size = var.env == "prod" ? 20 : var.ec2_default_root_storage_size
    volume_type = "gp3"
  }

  tags = {
    Name = each.key
  }
}

resource "aws_instance" "my_new_instance" {
  ami = "unknown"
  instance_type = "unknown"
}
